사용자 정의 옵션 전달 및 readme 수정

--- a/@index.html
+++ b/@index.html
@@ -20,10 +20,10 @@
 
 	<p id="admin">작업자 : 작업자를 입력하세요.</p>
 
-	<p id="date">마지막 수정 : 2015.81.18. 17:07</p>
+	<p id="date">2015년 9월 18일 18시 14분 수정됨</p>
 
 	<ul id="list">
-	<li><a href="dist/page1.html">page1<span>/ page1.html</span></a></li><li><a href="dist/page2.html">page2<span>/ page2.html</span></a></li><li><a href="dist/page3.html">page3<span>/ page3.html</span></a></li><li><a href="dist/page4.html">page4<span>/ page4.html</span></a></li><li><a href="dist/page5.html">page5<span>/ page5.html</span></a></li></ul>
+	<li><a href="demo/page1.html">page1<span>/ page1.html</span></a></li><li><a href="demo/page2.html">page2<span>/ page2.html</span></a></li><li><a href="demo/page3.html">page3<span>/ page3.html</span></a></li><li><a href="demo/page4.html">page4<span>/ page4.html</span></a></li><li><a href="demo/page5.html">page5<span>/ page5.html</span></a></li></ul>
 
 </body>
 </html>
