--- a/@index.html
+++ b/@index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,target-densitydpi=medium-dpi">
 	<title>마크업 리스트</title>
 	<style>
 		h1{font-size:20px;color:#444;}
@@ -16,14 +17,19 @@
 </head>
 <body>
 
-	<h1 id="title">프로젝트명을 입력하세요</h1>
+<h1 id="title">미디어젠</h1>
 
-	<p id="admin">작업자 : 작업자를 입력하세요.</p>
+<p id="admin">작업자 : 메시</p>
 
-	<p id="date">2015년 9월 18일 18시 14분 수정됨</p>
+<p id="date">2015년 9월 22일 17시 36분 수정됨</p>
 
-	<ul id="list">
-	<li><a href="demo/page1.html">page1<span>/ page1.html</span></a></li><li><a href="demo/page2.html">page2<span>/ page2.html</span></a></li><li><a href="demo/page3.html">page3<span>/ page3.html</span></a></li><li><a href="demo/page4.html">page4<span>/ page4.html</span></a></li><li><a href="demo/page5.html">page5<span>/ page5.html</span></a></li></ul>
+<ul id="list">
+<li><a href="demo/page1.html">page1<span>/ page1.html</span></a></li>
+<li><a href="demo/page2.html">page2<span>/ page2.html</span></a></li>
+<li><a href="demo/page3.html">page3<span>/ page3.html</span></a></li>
+<li><a href="demo/page4.html">page4<span>/ page4.html</span></a></li>
+<li><a href="demo/page5.html">page5<span>/ page5.html</span></a></li>
+</ul>
 
 </body>
 </html>
