folder 별 grouping 작업 진행

--- a/@index.html
+++ b/@index.html
@@ -17,11 +17,11 @@
 </head>
 <body>
 
-<h1 id="title">미디어젠</h1>
+<h1 id="title">네이버</h1>
 
 <p id="admin">작업자 : 메시</p>
 
-<p id="date">2015년 9월 22일 17시 36분 수정됨</p>
+<p id="date">2015년 10월 23일 18시 17분 수정됨</p>
 
 <ul id="list">
 <li><a href="demo/page1.html">page1<span>/ page1.html</span></a></li>
@@ -29,6 +29,15 @@
 <li><a href="demo/page3.html">page3<span>/ page3.html</span></a></li>
 <li><a href="demo/page4.html">page4<span>/ page4.html</span></a></li>
 <li><a href="demo/page5.html">page5<span>/ page5.html</span></a></li>
+<li><a href="demo/etc-page1.html">ETC1<span>/ etc-page1.html</span></a></li>
+<li><a href="demo/etc-page2.html">ETC2<span>/ etc-page2.html</span></a></li>
+<li><a href="demo/etc-page3.html">ETC3<span>/ etc-page3.html</span></a></li>
+<li><a href="demo/home-page1.html">Home1<span>/ home-page1.html</span></a></li>
+<li><a href="demo/home-page2.html">Home2<span>/ home-page2.html</span></a></li>
+<li><a href="demo/home-page3.html">Home3<span>/ home-page3.html</span></a></li>
+<li><a href="demo/sub-page1.html">Sub1<span>/ sub-page1.html</span></a></li>
+<li><a href="demo/sub-page2.html">Sub2<span>/ sub-page2.html</span></a></li>
+<li><a href="demo/sub-page3.html">Sub3<span>/ sub-page3.html</span></a></li>
 </ul>
 
 </body>
