--- a/@index.html
+++ b/@index.html
@@ -6,13 +6,14 @@
 	<title>마크업 리스트</title>
 	<style>
 		h1{font-size:20px;color:#444;}
+		h2{margin:15px 0 0;font-size:16px;}
 		#admin, #date{margin:5px 0;font-size:11px;color:#999;}
-		#list{margin:20px 0 0;padding:0;}
-		#list li{list-style:none;margin:0;padding:0;border-top:1px solid #eaeaea;}
-		#list li:first-child{border-top:3px solid #444;}
-		#list a{display:block;padding:10px 31px 10px 5px;text-decoration:none;color:#000;font-size:13px;background:url(data:image/gif;base64,R0lGODlhEQAJAIABAJWVlf///yH5BAEAAAEALAAAAAARAAkAAAITBIKpa7efGpxyvmoRztt272RJAQA7) no-repeat 100% 50%;}
-		#list a:hover{background-color:#effcff;}
-		#list a span{margin-left:10px;color:#aaa;font-style:italic;}
+		.list{margin:5px 0 0;padding:0;}
+		.list li{list-style:none;margin:0;padding:0;border-top:1px solid #eaeaea;}
+		.list li:first-child{border-top:3px solid #444;}
+		.list a{display:block;padding:10px 31px 10px 5px;text-decoration:none;color:#000;font-size:13px;background:url(data:image/gif;base64,R0lGODlhEQAJAIABAJWVlf///yH5BAEAAAEALAAAAAARAAkAAAITBIKpa7efGpxyvmoRztt272RJAQA7) no-repeat 100% 50%;}
+		.list a:hover{background-color:#effcff;}
+		.list a span{margin-left:10px;color:#aaa;}
 	</style>
 </head>
 <body>
@@ -21,24 +22,25 @@
 
 <p id="admin">작업자 : 메시</p>
 
-<p id="date">2015년 10월 23일 18시 17분 수정됨</p>
+<p id="date">2015년 10월 24일 1시 25분 수정됨</p>
 
-<ul id="list">
-<li><a href="demo/page1.html">page1<span>/ page1.html</span></a></li>
-<li><a href="demo/page2.html">page2<span>/ page2.html</span></a></li>
-<li><a href="demo/page3.html">page3<span>/ page3.html</span></a></li>
-<li><a href="demo/page4.html">page4<span>/ page4.html</span></a></li>
-<li><a href="demo/page5.html">page5<span>/ page5.html</span></a></li>
-<li><a href="demo/etc-page1.html">ETC1<span>/ etc-page1.html</span></a></li>
-<li><a href="demo/etc-page2.html">ETC2<span>/ etc-page2.html</span></a></li>
-<li><a href="demo/etc-page3.html">ETC3<span>/ etc-page3.html</span></a></li>
-<li><a href="demo/home-page1.html">Home1<span>/ home-page1.html</span></a></li>
-<li><a href="demo/home-page2.html">Home2<span>/ home-page2.html</span></a></li>
-<li><a href="demo/home-page3.html">Home3<span>/ home-page3.html</span></a></li>
-<li><a href="demo/sub-page1.html">Sub1<span>/ sub-page1.html</span></a></li>
-<li><a href="demo/sub-page2.html">Sub2<span>/ sub-page2.html</span></a></li>
-<li><a href="demo/sub-page3.html">Sub3<span>/ sub-page3.html</span></a></li>
-</ul>
+<div class="content">
+
+<h2></h2><ul class="list base"><li><a href="demo/page1.html">page1<span>: demo/page1.html</span></a></li>
+<li><a href="demo/page2.html">page2<span>: demo/page2.html</span></a></li>
+<li><a href="demo/page3.html">page3<span>: demo/page3.html</span></a></li>
+<li><a href="demo/page4.html">page4<span>: demo/page4.html</span></a></li>
+<li><a href="demo/page5.html">page5<span>: demo/page5.html</span></a></li>
+</ul><h2>etc/</h2><ul class="list etc"><li><a href="demo/etc/etc-page1.html">ETC1<span>: demo/etc/etc-page1.html</span></a></li>
+<li><a href="demo/etc/etc-page2.html">ETC2<span>: demo/etc/etc-page2.html</span></a></li>
+<li><a href="demo/etc/etc-page3.html">ETC3<span>: demo/etc/etc-page3.html</span></a></li>
+</ul><h2>home/</h2><ul class="list home"><li><a href="demo/home/home-page1.html">Home1<span>: demo/home/home-page1.html</span></a></li>
+<li><a href="demo/home/home-page2.html">Home2<span>: demo/home/home-page2.html</span></a></li>
+<li><a href="demo/home/home-page3.html">Home3<span>: demo/home/home-page3.html</span></a></li>
+</ul><h2>sub/</h2><ul class="list sub"><li><a href="demo/sub/sub-page1.html">Sub1<span>: demo/sub/sub-page1.html</span></a></li>
+<li><a href="demo/sub/sub-page2.html">Sub2<span>: demo/sub/sub-page2.html</span></a></li>
+<li><a href="demo/sub/sub-page3.html">Sub3<span>: demo/sub/sub-page3.html</span></a></li>
+</ul></div>
 
 </body>
 </html>
