--- a/demo/@index.html
+++ b/demo/@index.html
@@ -22,11 +22,12 @@
 
 <p id="admin">작업자 : 메시</p>
 
-<p id="date">2015년 10월 24일 14시 00분 수정됨</p>
+<p id="date">2015년 10월 26일 12시 11분 수정됨</p>
 
 <div class="content">
 
-<h2></h2><ul class="list base"><li><a href="page1.html">page1<span>: page1.html</span></a></li>
+<h2></h2><ul class="list base"><li><a href="@index.html">마크업 리스트<span>: @index.html</span></a></li>
+<li><a href="page1.html">page1<span>: page1.html</span></a></li>
 <li><a href="page2.html">page2<span>: page2.html</span></a></li>
 <li><a href="page3.html">page3<span>: page3.html</span></a></li>
 <li><a href="page4.html">page4<span>: page4.html</span></a></li>
